--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,12 @@ body {
   background-color: #fff2e5;
 }
 
+@media only screen and (max-width: 768px) {
+  .custom-jumbotron {
+    background-image: linear-gradient(to right bottom, #ffd5ab6c, #fff2e548), url("/image/flower.png");
+  }
+}
+
 .img-us:hover {
   transition: 350ms ease-in-out;
   transform: scale(1.05) translateY(-0.5rem);
@@ -87,54 +93,53 @@ body {
 }
 
 .list {
-    list-style: none;
-    display: inline-block;
+  list-style: none;
+  display: inline-block;
 }
 
-    .fa-instagram {
-        color: #e4405f;
-        margin-right: 3rem;
-        
-    }
-    .fa-instagram:hover {
-        transition: 350ms ease-in-out;
-        -webkit-transform: scale(1.4);
-        transform: scale(1.4);
-    }
-    .fa-facebook-square {
-        color: #007bff;
-        margin-right: 3rem;
-    }
-    .fa-facebook-square:hover {
-        transition: 350ms ease-in-out;
-        -webkit-transform: scale(1.4);
-        transform: scale(1.4);
-    }
-    .fa-github {
-        color: #3c4245;
-        margin-right: 3rem;
-    }
-    
-    .fa-github:hover {
-        transition: 350ms ease-in-out;
-        -webkit-transform: scale(1.4);
-        transform: scale(1.4);
-    }
+.fa-instagram {
+  color: #e4405f;
+  margin-right: 3rem;
+}
+.fa-instagram:hover {
+  transition: 350ms ease-in-out;
+  -webkit-transform: scale(1.4);
+  transform: scale(1.4);
+}
+.fa-facebook-square {
+  color: #007bff;
+  margin-right: 3rem;
+}
+.fa-facebook-square:hover {
+  transition: 350ms ease-in-out;
+  -webkit-transform: scale(1.4);
+  transform: scale(1.4);
+}
+.fa-github {
+  color: #3c4245;
+  margin-right: 3rem;
+}
 
-    .fa-vk:hover {
-        color: #007bff;
-        transition: 350ms ease-in-out;
-        -webkit-transform: scale(1.4);
-        transform: scale(1.4);
-    }
-    .copyright {
-        color: #b7472a ;
-        font-size: 1rem;
-        text-align: center;
-        padding-left: 5rem;
-    }
+.fa-github:hover {
+  transition: 350ms ease-in-out;
+  -webkit-transform: scale(1.4);
+  transform: scale(1.4);
+}
 
+.fa-vk:hover {
+  color: #007bff;
+  transition: 350ms ease-in-out;
+  -webkit-transform: scale(1.4);
+  transform: scale(1.4);
+}
+.copyright {
+  color: #b7472a;
+  font-size: 1rem;
+  text-align: center;
+  padding-left: 5rem;
+}
 
-.success, .error {
+.success,
+.error {
   display: none;
 }
